fix: add image stretch fix

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ main * {
     padding: 1rem;
 
     color: var(--secondary-color);
+    text-align: center;
 }
 
 .header-container > h1 {
@@ -220,6 +221,9 @@ button:hover {
     }
     img{
         width: 70px;
+    }
+    button{
+        height: 120px;
     }
     html{
         font-size: 12px;
